--- a/Labs/Lab 3 -  Illumination and Texture Mapping/1. Train/.vscode/settings.json
+++ b/Labs/Lab 3 -  Illumination and Texture Mapping/1. Train/.vscode/settings.json
@@ -7,6 +7,7 @@
 
     // Windows: g++ $fileName -o $fileNameWithoutExt -lOpenGL32 -lGLU32 -lfreeGLUT && $fileNameWithoutExt
     "code-runner.executorMap": {
-        "cpp": "g++ $fileName -o $fileNameWithoutExt -lOpenGL32 -lGLU32 -lfreeGLUT && $fileNameWithoutExt"
+        "cpp": "g++ $fileName -o $fileNameWithoutExt -lGL -lGLU -lglut && ./$fileNameWithoutExt"
+        // "cpp": "g++ $fileName -o $fileNameWithoutExt -lOpenGL32 -lGLU32 -lfreeGLUT && $fileNameWithoutExt"
     },
 }
