--- a/Projects/Assignment 1/Museum/.vscode/tasks.json
+++ b/Projects/Assignment 1/Museum/.vscode/tasks.json
@@ -29,7 +29,7 @@
                 "command": "cd Windows && main.exe"
             },
             "linux": {
-                "command": "cd Linux && ./main"
+                "command": "cd Linux && __GL_SYNC_TO_VBLANK=0 ./main"
             },
         }
     ],
