collision fixes - still buggy - added horizontal collisions

--- a/Projects/Assignment 1/Museum/.vscode/launch.json
+++ b/Projects/Assignment 1/Museum/.vscode/launch.json
@@ -12,9 +12,8 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "gdb",
-            
 
             "windows": {
                 "program": "${workspaceFolder}/Windows/main.exe",
