--- a/Projects/Assignment 1/Museum/.vscode/settings.json
+++ b/Projects/Assignment 1/Museum/.vscode/settings.json
@@ -5,7 +5,11 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "utility": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp"
     },
     "actionButtons": {
         "defaultColor": "light-grey",
