fixed bugs - lab 4 updates

--- a/Projects/Assignment 1/Museum/.vscode/settings.json
+++ b/Projects/Assignment 1/Museum/.vscode/settings.json
@@ -22,7 +22,7 @@
             }, {
                 "name": "Run  $(arrow-right)",
                 "singleInstance": true,
-                "command": "cd Linux && __GL_SYNC_TO_VBLANK=0 ./main",
+                "command": "cd Linux && make run",
             }
         ]
     }
