--- a/Projects/Assignment 2/The Basic Ray Tracer/.vscode/settings.json
+++ b/Projects/Assignment 2/The Basic Ray Tracer/.vscode/settings.json
@@ -41,7 +41,8 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "complex": "cpp"
     },
     "actionButtons": {
         "defaultColor": "light-grey",
